Update yureka maintainer

--- a/res/values/resurrection_device_maintainers_strings.xml
+++ b/res/values/resurrection_device_maintainers_strings.xml
@@ -137,7 +137,7 @@
   <string name="device_r7plus_summary">R7plus \nMaintainer - Pixelfreak2005</string>
 
   <string name="device_oneplus2">OnePlus Two</string>
-  <string name="device_oneplus2_summary">OnePlus 2 \nMaintainer - Shreesha Murthy</string>
+  <string name="device_oneplus2_summary">OnePlus 2 \nMaintainer - Pranay Narang</string>
 
   <string name="device_oneplus3">OnePlus 3/3t[Unified]</string>
   <string name="device_oneplus3_summary">oneplus3 \nMaintainer Akhil Narang</string>
@@ -482,7 +482,7 @@
   <string name="device_garlic_summary">Garlic\nMaintainer- Vjs Pranav</string>
 
   <string name="device_tomato">Yu Yureka</string>
-  <string name="device_tomato_summary">Tomato\nMaintainer - Men_in_black007 (Sanyam Jain)</string>
+  <string name="device_tomato_summary">Tomato\nMaintainer - Sanchit Rohilla</string>
 
   <string name="device_jalebi">Yu Yunique</string>
   <string name="device_jalebi_summary">Jalebi\nMaintainer - Sai Charan, Shaik Jaleel (iamsj7)</string>
